--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  font_awesome_flutter: ^8.11.0
+  firebase_auth: ^0.20.0+1
+  firebase_core: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -64,11 +67,11 @@ flutter:
     - family: Billabong
       fonts:
         - asset: assets/fonts/billabong1.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+
+    - family: Aveny
+      fonts:
+        - asset: assets/fonts/AvenueNormal.ttf
+          style: normal
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
